<resources>
    <string name="app_name">Eventory</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Sign in activity . mxl strings -->

    <string name="sign_up_link">No account yet? Create one!</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_sign_in">Sign in</string>

    <!-- Sign up activity . xml string -->
    <string name="sign_up_register_title">Register New User</string>
    <string name="sign_up_username_input">Name: </string>
    <string name="sign_up_password_input">Password</string>
    <string name="sign_up_password_confirm_input">Confirm Password</string>
    <string name="sign_up_email_input">Email</string>
    <string name="sign_up_user_type">User type</string>
    <string name="sign_up_rb_user">User</string>
    <string name="sign_up_rb_owner">Owner</string>
    <string name="sign_up_place_info_title">Provide your place\'s information</string>
    <string name="sign_up_place_name">Place Name</string>
    <string name="sign_up_place_address">Address</string>
    <string name="sign_up_place_phone">Phone</string>
    <string name="sign_up_sign_up_button">Sign up</string>


    <!-- New event strings -->
    <string name="new_event_name">Name</string>
    <string name="new_event_type">Type</string>
    <string name="new_event_title">Add Event\'s Information</string>
    <string name="new_event_cancel_btn">Cancel</string>
    <string name="new_event_add_btn">Add</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="user_name">user</string>
    <string name="text_view_date">Date:</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
</resources>
