<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event_title"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/darkGrey"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/et_new_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_event_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/et_new_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_event_type" />
    </android.support.design.widget.TextInputLayout>





    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/ll_date"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="120">

        <TextView
            android:id="@+id/tv_new_event_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="20"
            android:text="Date: "
            android:textSize="20dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="25"

                >
                <EditText
                    android:id="@+id/et_new_event_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Year"
                    android:textAlignment="center"
                    android:clickable="true"
                    />
            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            >
            <EditText
                android:id="@+id/et_new_event_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:hint="Month"
                android:clickable="true"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            >
            <EditText
                android:id="@+id/et_new_event_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:hint="Day"
                android:clickable="true"
                />
        </android.support.design.widget.TextInputLayout>




    </LinearLayout>







    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:weightSum="100">


            <Button
                android:id="@+id/new_event_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="49"
                android:text="@string/new_event_cancel_btn"
                android:background="@android:color/transparent"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

            <Button
                android:id="@+id/new_event_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="49"
                android:text="@string/new_event_add_btn"
                android:background="@android:color/transparent"/>

    </LinearLayout>


</LinearLayout>